--- a/module3solution/index.html
+++ b/module3solution/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav class="navbar bg-dark">
-        <div class="container">
+        <div class="container-fluid">
             <a class="navbar-brand" href="#">"Food, LLC"</a>
             <button class="navbar-toggler d-sm-none" type="button" data-bs-toggle="collapse" data-bs-target="#dropdownmenu" aria-controls="dropdownmenu" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -33,7 +33,7 @@
         </div>
     </nav>
     <h1 class="text-center">Our Menu</h1>
-    <div class="container">
+    <div class="container-fluid">
         <section class="col-xs-12">
             <h2 class="text-center">Chicken</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas fringilla phasellus faucibus scelerisque. Pretium fusce id velit ut tortor pretium viverra suspendisse. Consectetur lorem donec massa sapien faucibus et. Tellus rutrum tellus pellentesque eu tincidunt tortor aliquam. Morbi non arcu risus quis varius quam. Vestibulum lorem sed risus ultricies tristique. Dui nunc mattis enim ut. In metus vulputate eu scelerisque felis imperdiet proin fermentum. Enim tortor at auctor urna nunc id. Ligula ullamcorper malesuada proin libero nunc consequat interdum varius. Orci nulla pellentesque dignissim enim. Id venenatis a condimentum vitae sapien. Tempus egestas sed sed risus pretium quam vulputate dignissim suspendisse. Pulvinar proin gravida hendrerit lectus. Augue ut lectus arcu bibendum at varius. Suspendisse potenti nullam ac tortor vitae purus faucibus ornare. Aliquam sem et tortor consequat id porta nibh venenatis. Sed felis eget velit aliquet sagittis id consectetur purus. Leo vel fringilla est ullamcorper. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas fringilla phasellus faucibus scelerisque. Pretium fusce id velit ut tortor pretium viverra suspendisse. Consectetur lorem donec massa sapien faucibus et. Tellus rutrum tellus pellentesque eu tincidunt tortor aliquam. Morbi non arcu risus quis varius quam. Vestibulum lorem sed risus ultricies tristique. Dui nunc mattis enim ut. In metus vulputate eu scelerisque felis imperdiet proin fermentum. Enim tortor at auctor urna nunc id. Ligula ullamcorper malesuada proin libero nunc consequat interdum varius. Orci nulla pellentesque dignissim enim. Id venenatis a condimentum vitae sapien. Tempus egestas sed sed risus pretium quam vulputate dignissim suspendisse. Pulvinar proin gravida hendrerit lectus. Augue ut lectus arcu bibendum at varius.</p>
