--- a/module3solution/index.html
+++ b/module3solution/index.html
@@ -11,10 +11,10 @@
     <nav class="navbar bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">"Food, LLC"</a>
-            <button class="navbar-toggler d-sm-none" type="button" data-bs-toggle="collapse" data-bs-target="#dropdownmenu" aria-controls="dropdownmenu" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#dropdownmenu" aria-controls="dropdownmenu" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse d-sm-none" id="dropdownmenu">
+            <div class="collapse navbar-collapse d-md-none" id="dropdownmenu">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                       <a class="nav-link" aria-current="page" href="#">Chicken</a>
